# nbodies

./: .gitignore  Cargo.toml  README.md
data/: solar_system.json
src/: common.rs  core.rs  draw.rs  keys.rs  lib.rs  log.rs  main.rs  physics.rs  shape.rs  shapes.rs  vector.rs
src/physics/: common.rs  dynamics.rs  forces.rs  units.rs  vector.rs
src/physics/dynamics/: body.rs  forces.rs  orbital.rs  point.rs  potentials.rs
src/physics/units/: consts.rs  date.rs  prefix.rs  scalar.rs  suffix.rs
src/shapes/: ellipse.rs
