[package]
name = "nbodies"
version = "0.1.0"
authors = ["bendou <sami.dahoux@etu.emse.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynamics = {path="../dynamics"}
unitflow = {path="../unitflow"}
geomath = ""
rand = ""
serde = { version = "0.9", features = ["derive"] }
serde_json = "0.9"
find_folder = ""
getopts = "0.2.21"
piston = ""
piston_window = "0.98.0"
piston2d-graphics = "0.35.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.69.0"
